# windowsill-lab

./: .gitignore  .htmlvalidate.json  BACKLOG.md  CITIZEN_SCIENCE.md  MILESTONES.md  README.md  WINDOWSILL_AUDIT_VERIFICATION.md  WINDOWSILL_PUBLIC_EXPERIENCE_AUDIT.md  physics-latest.json  pot.json  pyproject.toml
release/: m14-nishimori-v1.sha256
reports/: .gitignore  2026-06-08.html  2026-06-08.json  2026-06-14-m01.json  2026-06-15-m02.html  2026-06-15-m02.json  2026-06-16-m01.html  2026-06-16-m01.json  2026-06-16-m03.html  2026-06-16-m03.json  2026-06-16-m06.html  2026-06-16-m06.json  2026-06-17-m01.html  2026-06-17-m01.json  2026-06-18-m01.html  2026-06-18-m01.json  2026-06-24-m05.html  2026-06-24-m05.json  2026-06-25-m07.html  2026-06-25-m07.json  2026-06-25-m09.html  2026-06-25-m09.json  2026-06-25-m11.html  2026-06-25-m11.json  2026-07-01-m12.json  2026-07-01-m13.json  2026-07-04-m12.html  2026-07-04-m12.json  2026-07-04-m13.html  2026-07-04-m13.json  2026-07-05-m14.html  2026-07-05-m14.json  2026-07-07-m15.html  2026-07-07-m15.json  2026-07-22-m17.html  2026-07-22-m17.json  index.html  latest.html
schema/: pot.schema.json
scripts/: .gitignore  campaign.sh  windowsill-campaign.service
tests/: __init__.py  test_archive.py  test_checks.py  test_cli.py  test_controls.py  test_determinism_golden.py  test_four_plants.py  test_fss.py  test_fss_updater.py  test_ising.py  test_ising3d.py  test_m01_equilibration.py  test_m03.py  test_m04.py  test_m05.py  test_m06.py  test_m06_updater.py  test_m07.py  test_m08.py  test_m09.py  test_m10.py  test_m11.py  test_m12.py  (+18 more)
(+119 files in other folders)
