[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windowsill-lab"
version = "0.1.0"
description = "A patient scientific instrument for physics, compute, archives, and sensors."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
lab = "lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
